--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_1.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_1.yaml
@@ -151,7 +151,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
 - "title": "The ERA5 global reanalysis"
@@ -160,11 +160,11 @@
   - 1
   - 8
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   - "Resource Utilization"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "Denoising diffusion probabilistic models"
   "unique_context_marker": "[18]"
   "block_ids":
@@ -273,7 +273,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "The origins of computer weather prediction and climate modeling"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -295,7 +295,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "ClimaX: A foundation model for weather and climate"
@@ -312,7 +312,7 @@
   - "Prior Methods"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Foundation models and generative architectures"
 - "title": "Probabilistic weather forecasting with hierarchical graph neural networks"
@@ -384,7 +384,7 @@
   - 4
   - 12
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
@@ -400,7 +400,7 @@
   - "Benchmark Utilization"
   - "Benchmark Utilization"
   "topic_labels":
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Toward data-driven weather and climate forecasting: Approximating a simple general circulation model with deep learning"
   "unique_context_marker": "[42]"
