--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_10.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_10.yaml
@@ -74,7 +74,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "An image is worth 16x16 words: Transformers for image recognition at scale"
   "unique_context_marker": "[9]"
   "block_ids":
@@ -130,7 +130,7 @@
   - "Resource Utilization"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving subseasonal forecasting in the western us with machine learning"
   "unique_context_marker": "[16]"
   "block_ids":
@@ -270,7 +270,7 @@
   - 2
   - 11
   "intent_labels":
-  - "Benchmark Utilization"
+  - "Research Gap"
   - "Research Gap"
   - "Setting/Protocal Adoption"
   "topic_labels":
@@ -287,7 +287,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Scaling transformer neural networks for skillful and reliable medium-range weather forecasting"
   "unique_context_marker": "[33]"
   "block_ids":
@@ -301,7 +301,7 @@
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Probabilistic weather forecasting with hierarchical graph neural networks"
   "unique_context_marker": "[34]"
   "block_ids":
@@ -323,7 +323,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
@@ -338,7 +338,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Zero-shot text-to-image generation"
   "unique_context_marker": "[38]"
@@ -436,7 +436,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Result Comparison"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Can machines learn to predict weather? Using deep learning to predict gridded 500-hPa geopotential height from historical weather data"
@@ -454,7 +454,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Advances in the application and utility of subseasonal-to-seasonal predictions"
   "unique_context_marker": "[52]"
   "block_ids":
@@ -462,7 +462,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "The met office global coupled model 2.0 (gc2) configuration"
   "unique_context_marker": "[53]"
   "block_ids":
