--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_3.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_3.yaml
@@ -8,7 +8,7 @@
   "intent_labels":
   - "Prior Methods"
   - "Problem Formulation"
-  - "Other Intent"
+  - "Problem Formulation"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Downscaling, bias correction, and data assimilation"
@@ -49,7 +49,7 @@
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Joint air quality and weather prediction based on multi-adversarial spatiotemporal networks"
   "unique_context_marker": "[6]"
@@ -118,7 +118,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "GraphCast: Learning skillful medium-range global weather forecasting"
@@ -147,7 +147,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "Physics-informed neural operator for learning partial differential equations"
   "unique_context_marker": "[17]"
   "block_ids":
@@ -161,7 +161,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Conditional local convolution for spatio-temporal meteorological forecasting"
@@ -214,7 +214,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "ClimateLearn: Benchmarking Machine Learning for Weather and Climate Modeling"
   "unique_context_marker": "[25]"
   "block_ids":
@@ -254,7 +254,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
   "unique_context_marker": "[29]"
@@ -332,7 +332,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Deep uncertainty quantification: A machine learning approach for weather forecasting"
@@ -375,7 +375,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Correcting the bias of daily satellite precipitation estimates in tropical regions using deep neural network"
