--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_8.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_8.yaml
@@ -14,7 +14,7 @@
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "The quiet revolution of numerical weather prediction"
   "unique_context_marker": "[3]"
   "block_ids":
@@ -35,7 +35,7 @@
   - "Research Gap"
   - "Prior Methods"
   - "Model/Architecture Adoption"
-  - "Setting/Protocal Adoption"
+  - "Problem Formulation"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -48,7 +48,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Problem Formulation"
+  - "Setting/Protocal Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "pyESDv1.0.1: An open-source Python framework for empirical-statistical downscaling of climate information"
@@ -66,7 +66,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "DroughtCast: A Machine Learning Forecast of the United States Drought Monitor"
   "unique_context_marker": "[8]"
   "block_ids":
@@ -122,7 +122,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "RainBench: Enabling data-driven precipitation forecasting on a global scale"
   "unique_context_marker": "[15]"
   "block_ids":
@@ -138,7 +138,7 @@
   "intent_labels":
   - "Result Comparison"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "Deep learning for twelve hour precipitation forecasts"
   "unique_context_marker": "[17]"
   "block_ids":
@@ -157,7 +157,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Overview of the Coupled Model Intercomparison Project Phase 6 (CMIP6) experimental design and organization"
   "unique_context_marker": "[19]"
   "block_ids":
@@ -167,7 +167,7 @@
   - "Domain Overview"
   - "Resource Utilization"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Earthformer: Exploring space-time transformers for earth system forecasting"
   "unique_context_marker": "[20]"
@@ -234,8 +234,8 @@
   - "Model/Architecture Adoption"
   - "Result Comparison"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
+  - "Foundation models and generative architectures"
 - "title": "Masked autoencoders are scalable vision learners"
   "unique_context_marker": "[28]"
   "block_ids":
@@ -243,7 +243,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "The ERA5 global reanalysis"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -299,7 +299,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Physics-informed machine learning: case studies for weather and climate modelling"
   "unique_context_marker": "[36]"
   "block_ids":
@@ -307,7 +307,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Forecasting global weather with graph neural networks"
   "unique_context_marker": "[37]"
   "block_ids":
@@ -324,7 +324,7 @@
   - 14
   "intent_labels":
   - "Prior Methods"
-  - "Setting/Protocal Adoption"
+  - "Problem Formulation"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -337,7 +337,7 @@
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "Regional climate research: Needs and Opportunities"
   "unique_context_marker": "[40]"
   "block_ids":
@@ -345,7 +345,7 @@
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "Climate Downscaling Using YNet: A Deep Convolutional Network with Skip Connections and Fusion"
   "unique_context_marker": "[41]"
   "block_ids":
@@ -361,7 +361,7 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "Climate damages and adaptation potential across diverse sectors of the United States"
   "unique_context_marker": "[43]"
   "block_ids":
@@ -377,7 +377,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "DroughtED: A dataset and methodology for drought forecasting spanning multiple climate zones"
   "unique_context_marker": "[45]"
   "block_ids":
@@ -385,7 +385,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Analyzing climate change impacts on health, energy, water resources, and biodiversity sectors for effective climate change policy in South Korea"
   "unique_context_marker": "[46]"
   "block_ids":
@@ -401,7 +401,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Learned benchmarks for subseasonal forecasting"
   "unique_context_marker": "[48]"
   "block_ids":
@@ -431,7 +431,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Climate Change and Climate Modeling"
   "unique_context_marker": "[51]"
   "block_ids":
@@ -500,7 +500,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "PRISM"
   "unique_context_marker": "[57]"
   "block_ids":
@@ -524,7 +524,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "ExtremeWeather: A large-scale climate dataset for semi-supervised detection, localization, and understanding of extreme weather events"
   "unique_context_marker": "[60]"
   "block_ids":
@@ -532,18 +532,18 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "FloodNet: A high resolution aerial imagery dataset for post flood scene understanding"
   "unique_context_marker": "[61]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
-  - "Research Gap"
+  - "Domain Overview"
   - "Prior Methods"
   "topic_labels":
   - "Food security, health, and disaster response"
-  - "Food security, health, and disaster response"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Data-Driven Medium-Range Weather Prediction With a ResNet Pretrained on Climate Simulations: A New Model for WeatherBench"
   "unique_context_marker": "[62]"
   "block_ids":
@@ -566,7 +566,7 @@
   - 5
   - 9
   "intent_labels":
-  - "Research Gap"
+  - "Domain Overview"
   - "Prior Methods"
   - "Resource Utilization"
   - "Prior Methods"
@@ -582,7 +582,7 @@
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "Skilful precipitation nowcasting using deep generative models of radar"
   "unique_context_marker": "[65]"
   "block_ids":
@@ -598,7 +598,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Changing intensity of hydroclimatic extreme events revealed by GRACE and GRACE-FO"
   "unique_context_marker": "[67]"
   "block_ids":
@@ -630,8 +630,8 @@
   - "Model/Architecture Adoption"
   - "Result Comparison"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
+  - "Foundation models and generative architectures"
 - "title": "Statistical downscaling of precipitation using machine learning techniques"
   "unique_context_marker": "[70]"
   "block_ids":
@@ -645,7 +645,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Benchmark Utilization"
+  - "Resource Utilization"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Deep learning for improved global precipitation in numerical weather prediction systems"
@@ -690,7 +690,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Food security, health, and disaster response"
 - "title": "A contemporary review on drought modeling using machine learning approaches"
   "unique_context_marker": "[77]"
   "block_ids":
@@ -698,7 +698,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Downscaling of ERA-Interim temperature in the contiguous United States and its implications for rain–snow partitioning"
   "unique_context_marker": "[78]"
   "block_ids":
@@ -712,7 +712,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Spatio-temporal weather forecasting and attention mechanism on convolutional LSTMs"
@@ -747,7 +747,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Problem Formulation"
+  - "Setting/Protocal Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "ClimateBench v1.0: A Benchmark for Data-Driven Climate Projections"
@@ -759,9 +759,9 @@
   "intent_labels":
   - "Research Gap"
   - "Prior Methods"
-  - "Benchmark Utilization"
+  - "Resource Utilization"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
   - "Climate Prediction and Data-Driven Modeling"
   - "Climate Prediction and Data-Driven Modeling"
 - "title": "The modelling infrastructure of the Integrated Forecasting System: Recent advances and future challenges"
@@ -809,7 +809,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Meteorological drought forecasting based on a statistical model with machine learning techniques in Shaanxi province, China"
   "unique_context_marker": "[90]"
   "block_ids":
