--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_9.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_9.yaml
@@ -14,7 +14,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "The quiet revolution of numerical weather prediction"
   "unique_context_marker": "[3]"
   "block_ids":
@@ -59,7 +59,7 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - "Domain Overview"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -134,7 +134,7 @@
   "block_ids":
   - 10
   "intent_labels":
-  - "Metrics Utilization"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Calibration of large neural weather models"
@@ -175,12 +175,12 @@
   - 9
   "intent_labels":
   - "Research Gap"
-  - "Prior Methods"
-  - "Model/Architecture Adoption"
+  - "Research Gap"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Forecasting global weather with graph neural networks"
   "unique_context_marker": "[20]"
   "block_ids":
@@ -189,7 +189,7 @@
   - 5
   - 10
   "intent_labels":
-  - "Prior Methods"
+  - "Model/Architecture Adoption"
   - "Prior Methods"
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
@@ -214,7 +214,7 @@
   - 15
   "intent_labels":
   - "Prior Methods"
-  - "Metrics Utilization"
+  - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -234,7 +234,7 @@
   - 13
   - 15
   "intent_labels":
-  - "Prior Methods"
+  - "Model/Architecture Adoption"
   - "Prior Methods"
   - "Problem Formulation"
   - "Prior Methods"
@@ -242,7 +242,7 @@
   - "Model/Architecture Adoption"
   - "Algorithm/Principle Adoption"
   - "Result Comparison"
-  - "Model/Architecture Adoption"
+  - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -334,7 +334,7 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - "Domain Overview"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -394,7 +394,7 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - "Domain Overview"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -407,7 +407,7 @@
   - 15
   "intent_labels":
   - "Research Gap"
-  - "Prior Methods"
+  - "Research Gap"
   - "Prior Methods"
   "topic_labels":
   - "Foundation models and generative architectures"
@@ -457,7 +457,7 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - "Domain Overview"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
