--- a/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_1.yaml
+++ b/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_1.yaml
@@ -164,7 +164,7 @@
   - "Resource Utilization"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "Denoising diffusion probabilistic models"
   "unique_context_marker": "[18]"
   "block_ids":
@@ -273,7 +273,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "The origins of computer weather prediction and climate modeling"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -295,7 +295,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "ClimaX: A foundation model for weather and climate"
@@ -306,13 +306,13 @@
   - 4
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Prospective Application"
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Foundation models and generative architectures"
 - "title": "Probabilistic weather forecasting with hierarchical graph neural networks"
