--- a/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_10.yaml
+++ b/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_10.yaml
@@ -119,7 +119,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "The ERA5 global reanalysis"
   "unique_context_marker": "[15]"
   "block_ids":
@@ -129,8 +129,8 @@
   - "Domain Overview"
   - "Resource Utilization"
   "topic_labels":
-  - "Downscaling, bias correction, and data assimilation"
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving subseasonal forecasting in the western us with machine learning"
   "unique_context_marker": "[16]"
   "block_ids":
@@ -236,7 +236,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Progress in subseasonal to seasonal prediction through a joint weather and climate community effort"
@@ -244,7 +244,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Subseasonalclimateusa: a dataset for subseasonal forecasting and benchmarking"
@@ -270,7 +270,7 @@
   - 2
   - 11
   "intent_labels":
-  - "Benchmark Utilization"
+  - "Research Gap"
   - "Research Gap"
   - "Setting/Protocal Adoption"
   "topic_labels":
@@ -287,7 +287,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Scaling transformer neural networks for skillful and reliable medium-range weather forecasting"
   "unique_context_marker": "[33]"
   "block_ids":
@@ -301,7 +301,7 @@
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Probabilistic weather forecasting with hierarchical graph neural networks"
   "unique_context_marker": "[34]"
   "block_ids":
@@ -338,7 +338,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Zero-shot text-to-image generation"
   "unique_context_marker": "[38]"
@@ -355,7 +355,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "WeatherBench 2: A benchmark for the next generation of data-driven global weather models"
   "unique_context_marker": "[40]"
   "block_ids":
@@ -365,7 +365,7 @@
   - "Domain Overview"
   - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Generating diverse high-fidelity images with vq-vae-2"
   "unique_context_marker": "[41]"
@@ -436,7 +436,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Result Comparison"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Can machines learn to predict weather? Using deep learning to predict gridded 500-hPa geopotential height from historical weather data"
