--- a/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_3.yaml
+++ b/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_3.yaml
@@ -8,10 +8,10 @@
   "intent_labels":
   - "Prior Methods"
   - "Problem Formulation"
-  - "Problem Formulation"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Accurate medium-range global weather forecasting with 3D neural networks"
   "unique_context_marker": "[2]"
@@ -39,7 +39,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Adaptive fourier neural operators: Efficient token mixers for transformers"
   "unique_context_marker": "[5]"
   "block_ids":
@@ -49,7 +49,7 @@
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Joint air quality and weather prediction based on multi-adversarial spatiotemporal networks"
   "unique_context_marker": "[6]"
@@ -111,7 +111,7 @@
   - "Prior Methods"
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
   - "Downscaling, bias correction, and data assimilation"
 - "title": "Neural general circulation models for weather and climate"
   "unique_context_marker": "[13]"
@@ -147,7 +147,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "Physics-informed neural operator for learning partial differential equations"
   "unique_context_marker": "[17]"
   "block_ids":
@@ -161,7 +161,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Conditional local convolution for spatio-temporal meteorological forecasting"
@@ -195,7 +195,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "Learning differential operators for interpretable time series modeling"
   "unique_context_marker": "[23]"
   "block_ids":
@@ -203,7 +203,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
 - "title": "ClimaX: A foundation model for weather and climate"
   "unique_context_marker": "[24]"
   "block_ids":
@@ -214,7 +214,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "ClimateLearn: Benchmarking Machine Learning for Weather and Climate Modeling"
   "unique_context_marker": "[25]"
   "block_ids":
@@ -254,7 +254,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
   "unique_context_marker": "[29]"
@@ -278,7 +278,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Climate Prediction and Data-Driven Modeling"
   - "Downscaling, bias correction, and data assimilation"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "WeatherBench: a benchmark data set for data-driven weather forecasting"
@@ -332,7 +332,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Deep uncertainty quantification: A machine learning approach for weather forecasting"
