--- a/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_4.yaml
@@ -12,7 +12,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Accurate medium-range global weather forecasting with 3d neural networks"
@@ -34,7 +34,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Physics-informed neural networks (pinns) for fluid mechanics: A review"
@@ -178,14 +178,14 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "The era5 global reanalysis"
   "unique_context_marker": "[22]"
   "block_ids":
   - 1
   - 9
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   - "Resource Utilization"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -197,7 +197,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "An investigation on joint data assimilation of a radar network and ground-based profiling platforms for forecasting convective storms"
   "unique_context_marker": "[24]"
   "block_ids": []
@@ -209,7 +209,7 @@
   - 6
   - 11
   "intent_labels":
-  - "Resource Utilization"
+  - "Algorithm/Principle Adoption"
   - "Resource Utilization"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -379,7 +379,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "Scaling transformer neural networks for skillful and reliable medium-range weather forecasting"
   "unique_context_marker": "[43]"
   "block_ids":
@@ -419,7 +419,7 @@
   - 9
   - 11
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   - "Resource Utilization"
   - "Resource Utilization"
   "topic_labels":
@@ -447,7 +447,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Physics-informed neural network method for solving one-dimensional advection equation using pytorch"
@@ -488,7 +488,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Pred-bench: Benchmarking spatio-temporal prediction across diverse disciplines"
@@ -496,7 +496,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Towards a self-contained data-driven global weather forecasting framework"
@@ -527,7 +527,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "A review of recurrent neural networks: Lstm cells and network architectures"
   "unique_context_marker": "[60]"
   "block_ids":
@@ -535,7 +535,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "A spine segmentation method under an arbitrary field of view based on 3d swin transformer"
   "unique_context_marker": "[61]"
   "block_ids":
