--- a/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_7.yaml
+++ b/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_7.yaml
@@ -144,7 +144,7 @@
   "intent_labels":
   - "Prior Methods"
   - "Research Gap"
-  - "Prior Methods"
+  - "Research Gap"
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -203,7 +203,7 @@
   - "Research Gap"
   - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
   - "Foundation models and generative architectures"
 - "title": "Evaluation of ecmwf forecasts"
   "unique_context_marker": "[29]"
@@ -244,7 +244,7 @@
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Gaussian Error Linear Units (GELUs)"
   "unique_context_marker": "[34]"
   "block_ids":
@@ -252,7 +252,7 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Automatic Cross-Replica Sharding of Weight Update in Data-Parallel Training"
   "unique_context_marker": "[35]"
   "block_ids": []
@@ -273,7 +273,7 @@
   "block_ids":
   - 4
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Foundation models and generative architectures"
 - "title": "The Llama 3 Herd of Models"
@@ -281,7 +281,7 @@
   "block_ids":
   - 4
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Foundation models and generative architectures"
 - "title": "The ERA5 global reanalysis"
@@ -291,7 +291,7 @@
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "Data-driven ensemble forecasting with the aifs"
   "unique_context_marker": "[41]"
   "block_ids":
