--- a/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_1.yaml
+++ b/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_1.yaml
@@ -28,7 +28,7 @@
   - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
@@ -51,8 +51,8 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
   - "Spatio-temporal forecasting and nowcasting"
+  - null
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Fuxi: a cascade machine learning forecasting system for 15-day global weather forecast"
   "unique_context_marker": "[6]"
@@ -74,8 +74,8 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
   - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Combining distribution-based neural networks to predict weather forecast probabilities"
   "unique_context_marker": "[8]"
   "block_ids":
@@ -85,7 +85,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Diffusion models beat GANs on image synthesis"
   "unique_context_marker": "[9]"
@@ -114,7 +114,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Deep learning for twelve hour precipitation forecasts"
@@ -153,7 +153,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "The ERA5 global reanalysis"
   "unique_context_marker": "[17]"
   "block_ids":
@@ -163,7 +163,7 @@
   - "Domain Overview"
   - "Resource Utilization"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Denoising diffusion probabilistic models"
   "unique_context_marker": "[18]"
@@ -210,8 +210,8 @@
   - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
-  - null
   - "Spatio-temporal forecasting and nowcasting"
+  - null
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Auto-encoding variational bayes"
@@ -253,8 +253,8 @@
   - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
-  - null
   - "Spatio-temporal forecasting and nowcasting"
+  - null
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
@@ -263,7 +263,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Swin transformer v2: Scaling up capacity and resolution"
@@ -295,7 +295,7 @@
   "block_ids":
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "ClimaX: A foundation model for weather and climate"
@@ -306,13 +306,13 @@
   - 4
   - 7
   "intent_labels":
-  - "Research Gap"
+  - "Prospective Application"
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
   - "Model/Architecture Adoption"
   "topic_labels":
-  - null
   - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Foundation models and generative architectures"
 - "title": "Probabilistic weather forecasting with hierarchical graph neural networks"
@@ -322,7 +322,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "PyTorch: An imperative style, high-performance deep learning library"
   "unique_context_marker": "[34]"
   "block_ids": []
@@ -339,7 +339,7 @@
   - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Scalable diffusion models with transformers"
@@ -357,7 +357,7 @@
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - null
+  - "Foundation models and generative architectures"
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
   "unique_context_marker": "[38]"
   "block_ids":
@@ -365,7 +365,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "Data-driven medium-range weather prediction with a resnet pretrained on climate simulations: A new model for WeatherBench"
   "unique_context_marker": "[39]"
   "block_ids":
@@ -375,7 +375,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "WeatherBench: a benchmark data set for data-driven weather forecasting"
   "unique_context_marker": "[40]"
@@ -388,7 +388,7 @@
   - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "WeatherBench 2: A benchmark for the next generation of data-driven global weather models"
@@ -400,7 +400,7 @@
   - "Benchmark Utilization"
   - "Benchmark Utilization"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Toward data-driven weather and climate forecasting: Approximating a simple general circulation model with deep learning"
   "unique_context_marker": "[42]"
@@ -413,7 +413,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Metnet: A neural weather model for precipitation forecasting"
@@ -442,7 +442,7 @@
   - "Model/Architecture Adoption"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - null
+  - "Foundation models and generative architectures"
 - "title": "Climode: Climate and weather forecasting with physics-informed neural odes"
   "unique_context_marker": "[46]"
   "block_ids":
@@ -458,7 +458,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Can machines learn to predict weather? Using deep learning to predict gridded 500-hPa geopotential height from historical weather data"
   "unique_context_marker": "[48]"
   "block_ids":
@@ -470,7 +470,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving data-driven global weather prediction using deep convolutional neural networks on a cubed sphere"
@@ -484,7 +484,7 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "PyTorch image models"
