--- a/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_10.yaml
+++ b/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_10.yaml
@@ -11,7 +11,7 @@
   - 2
   - 12
   "intent_labels":
-  - "Result Comparison"
+  - "Prior Methods"
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
@@ -31,7 +31,7 @@
   "topic_labels":
   - "Foundation models and generative architectures"
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Fengwu: Pushing the skillful global medium-range weather forecast beyond 10 days lead"
   "unique_context_marker": "[4]"
   "block_ids":
@@ -50,7 +50,7 @@
   - "Result Comparison"
   "topic_labels":
   - null
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "FuXi: A cascade machine learning forecasting system for 15-day global weather forecast"
   "unique_context_marker": "[6]"
   "block_ids":
@@ -74,7 +74,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - null
 - "title": "An image is worth 16x16 words: Transformers for image recognition at scale"
   "unique_context_marker": "[9]"
   "block_ids":
@@ -130,7 +130,7 @@
   - "Resource Utilization"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Downscaling, bias correction, and data assimilation"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving subseasonal forecasting in the western us with machine learning"
   "unique_context_marker": "[16]"
   "block_ids":
@@ -172,8 +172,8 @@
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Uvim: A unified modeling approach for vision with learned guiding codes"
   "unique_context_marker": "[21]"
   "block_ids":
@@ -189,7 +189,7 @@
   - 2
   - 12
   "intent_labels":
-  - "Result Comparison"
+  - "Prior Methods"
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
@@ -236,17 +236,17 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
+  - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Progress in subseasonal to seasonal prediction through a joint weather and climate community effort"
   "unique_context_marker": "[28]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
+  - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Subseasonalclimateusa: a dataset for subseasonal forecasting and benchmarking"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -270,13 +270,13 @@
   - 2
   - 11
   "intent_labels":
-  - "Benchmark Utilization"
+  - "Research Gap"
   - "Research Gap"
   - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
   - null
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
+  - null
 - "title": "ClimaX: A foundation model for weather and climate"
   "unique_context_marker": "[32]"
   "block_ids":
@@ -287,7 +287,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Scaling transformer neural networks for skillful and reliable medium-range weather forecasting"
   "unique_context_marker": "[33]"
   "block_ids":
@@ -295,13 +295,13 @@
   - 2
   - 12
   "intent_labels":
-  - "Result Comparison"
+  - "Prior Methods"
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Probabilistic weather forecasting with hierarchical graph neural networks"
   "unique_context_marker": "[34]"
   "block_ids":
@@ -325,7 +325,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
   "unique_context_marker": "[37]"
   "block_ids":
@@ -338,7 +338,7 @@
   - "Result Comparison"
   "topic_labels":
   - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Zero-shot text-to-image generation"
   "unique_context_marker": "[38]"
@@ -422,7 +422,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "The subseasonal to seasonal (s2s) prediction project database"
   "unique_context_marker": "[48]"
   "block_ids":
@@ -430,13 +430,13 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "The modelling infrastructure of the Integrated Forecasting System: Recent advances and future challenges"
   "unique_context_marker": "[49]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Result Comparison"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Can machines learn to predict weather? Using deep learning to predict gridded 500-hPa geopotential height from historical weather data"
@@ -454,7 +454,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - null
 - "title": "Advances in the application and utility of subseasonal-to-seasonal predictions"
   "unique_context_marker": "[52]"
   "block_ids":
@@ -462,7 +462,7 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Food security, health, and disaster response"
+  - null
 - "title": "The met office global coupled model 2.0 (gc2) configuration"
   "unique_context_marker": "[53]"
   "block_ids":
