--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
@@ -6,7 +6,7 @@
   - 4
   - 10
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   - "Setting/Protocal Adoption"
   - "Setting/Protocal Adoption"
   "topic_labels":
@@ -18,7 +18,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Recent progress and outlook for the ECMWF integrated forecasting system"
@@ -26,7 +26,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Can deep learning beat numerical weather prediction?"
@@ -34,7 +34,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Weatherbench: a benchmark data set for data-driven weather forecasting"
@@ -62,7 +62,7 @@
   - 1
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Resource Utilization"
   - "Resource Utilization"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
@@ -72,7 +72,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving data-driven global weather prediction using deep convolutional neural networks on a cubed sphere"
@@ -89,7 +89,7 @@
   - 1
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -109,7 +109,7 @@
   - 3
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Setting/Protocal Adoption"
   - "Prior Methods"
   "topic_labels":
@@ -141,7 +141,7 @@
   - 1
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -155,7 +155,7 @@
   - 9
   - 14
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
@@ -176,7 +176,7 @@
   - 8
   - 14
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Setting/Protocal Adoption"
   - "Setting/Protocal Adoption"
   - "Algorithm/Principle Adoption"
