--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_4.yaml
@@ -12,7 +12,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Accurate medium-range global weather forecasting with 3d neural networks"
@@ -34,7 +34,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Physics-informed neural networks (pinns) for fluid mechanics: A review"
@@ -87,7 +87,7 @@
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Combining distribution-based neural networks to predict weather forecast probabilities"
   "unique_context_marker": "[11]"
   "block_ids":
@@ -137,8 +137,8 @@
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "A survey of methods for explaining black box models"
   "unique_context_marker": "[17]"
   "block_ids":
@@ -178,14 +178,14 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "The era5 global reanalysis"
   "unique_context_marker": "[22]"
   "block_ids":
   - 1
   - 9
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   - "Resource Utilization"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -197,7 +197,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "An investigation on joint data assimilation of a radar network and ground-based profiling platforms for forecasting convective storms"
   "unique_context_marker": "[24]"
   "block_ids": []
@@ -209,11 +209,11 @@
   - 6
   - 11
   "intent_labels":
-  - "Resource Utilization"
+  - "Algorithm/Principle Adoption"
   - "Resource Utilization"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Ordinary differential equations"
   "unique_context_marker": "[26]"
   "block_ids":
@@ -221,7 +221,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "A unified pyramid recurrent network for video frame interpolation"
   "unique_context_marker": "[27]"
   "block_ids":
@@ -231,7 +231,7 @@
   - "Setting/Protocal Adoption"
   - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Downscaling, bias correction, and data assimilation"
   - "Downscaling, bias correction, and data assimilation"
 - "title": "Flavr: Flow-agnostic video representations for fast frame interpolation"
   "unique_context_marker": "[28]"
@@ -242,7 +242,7 @@
   - "Setting/Protocal Adoption"
   - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Downscaling, bias correction, and data assimilation"
   - "Downscaling, bias correction, and data assimilation"
 - "title": "Forecasting global weather with graph neural networks"
   "unique_context_marker": "[29]"
@@ -419,7 +419,7 @@
   - 9
   - 11
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   - "Resource Utilization"
   - "Resource Utilization"
   "topic_labels":
@@ -447,7 +447,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Physics-informed neural network method for solving one-dimensional advection equation using pytorch"
@@ -467,8 +467,8 @@
   - "Prior Methods"
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
   - "Spatio-temporal forecasting and nowcasting"
+  - "Foundation models and generative architectures"
 - "title": "Climode: Climate and weather forecasting with physics-informed neural odes"
   "unique_context_marker": "[53]"
   "block_ids":
@@ -488,7 +488,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Pred-bench: Benchmarking spatio-temporal prediction across diverse disciplines"
@@ -496,7 +496,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Towards a self-contained data-driven global weather forecasting framework"
@@ -527,7 +527,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "A review of recurrent neural networks: Lstm cells and network architectures"
   "unique_context_marker": "[60]"
   "block_ids":
@@ -535,7 +535,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "A spine segmentation method under an arbitrary field of view based on 3d swin transformer"
   "unique_context_marker": "[61]"
   "block_ids":
@@ -543,7 +543,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Graph neural networks: A review of methods and applications"
   "unique_context_marker": "[62]"
   "block_ids":
