--- a/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_7.yaml
+++ b/data/raw/gis/climate/result/cot_output_gpt-5-2025-08-07/paper_7.yaml
@@ -144,12 +144,12 @@
   "intent_labels":
   - "Prior Methods"
   - "Research Gap"
-  - "Prior Methods"
+  - "Research Gap"
   - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Denoising Diffusion Probabilistic Models"
   "unique_context_marker": "[23]"
@@ -203,7 +203,7 @@
   - "Research Gap"
   - "Domain Overview"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Foundation models and generative architectures"
 - "title": "Evaluation of ecmwf forecasts"
   "unique_context_marker": "[29]"
@@ -291,7 +291,7 @@
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - "Downscaling, bias correction, and data assimilation"
 - "title": "Data-driven ensemble forecasting with the aifs"
   "unique_context_marker": "[41]"
   "block_ids":
