--- a/data/raw/gis/climate/result/taxo_cot_k_gpt-5-2025-08-07/paper_1.yaml
+++ b/data/raw/gis/climate/result/taxo_cot_k_gpt-5-2025-08-07/paper_1.yaml
@@ -32,11 +32,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
   - []
   - []
@@ -59,12 +55,12 @@
   - []
   - []
   "topic_labels":
+  - []
   - - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
-  - []
   - []
 - "title": "Fuxi: a cascade machine learning forecasting system for 15-day global weather forecast"
   "unique_context_marker": "[6]"
@@ -94,12 +90,12 @@
   - []
   - []
   "topic_labels":
+  - []
   - - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
-  - []
 - "title": "Combining distribution-based neural networks to predict weather forecast probabilities"
   "unique_context_marker": "[8]"
   "block_ids":
@@ -109,11 +105,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
 - "title": "Diffusion models beat GANs on image synthesis"
   "unique_context_marker": "[9]"
@@ -142,11 +134,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
   - []
 - "title": "Deep learning for twelve hour precipitation forecasts"
@@ -191,11 +179,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   "topic_labels":
   - - "Downscaling, bias correction, and data assimilation"
     - "Downscaling, bias correction, and data assimilation"
@@ -208,11 +192,7 @@
   - 1
   - 8
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   - []
   "topic_labels":
   - - "Downscaling, bias correction, and data assimilation"
@@ -220,7 +200,11 @@
     - "Downscaling, bias correction, and data assimilation"
     - "Downscaling, bias correction, and data assimilation"
     - "Downscaling, bias correction, and data assimilation"
-  - []
+  - - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
 - "title": "Denoising diffusion probabilistic models"
   "unique_context_marker": "[18]"
   "block_ids":
@@ -266,12 +250,12 @@
   - []
   - []
   "topic_labels":
+  - []
   - - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
-  - []
   - []
   - []
 - "title": "Auto-encoding variational bayes"
@@ -321,6 +305,7 @@
   - []
   - []
   "topic_labels":
+  - []
   - - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
     - "Spatio-temporal forecasting and nowcasting"
@@ -329,13 +314,16 @@
   - []
   - []
   - []
-  - []
 - "title": "Roots of ensemble forecasting"
   "unique_context_marker": "[27]"
   "block_ids":
   - 5
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "title": "Swin transformer v2: Scaling up capacity and resolution"
@@ -345,11 +333,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "The origins of computer weather prediction and climate modeling"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -390,24 +374,16 @@
   - 4
   - 7
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prospective Application"
-    - "Prior Methods"
+  - []
   - []
   - []
   - - "Prior Methods"
-    - "Model/Architecture Adoption"
+    - "Prior Methods"
     - "Prior Methods"
     - "Prior Methods"
     - "Prior Methods"
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
   - []
   - []
   - []
@@ -418,11 +394,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "PyTorch: An imperative style, high-performance deep learning library"
   "unique_context_marker": "[34]"
   "block_ids": []
@@ -439,11 +411,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
   - []
 - "title": "Scalable diffusion models with transformers"
@@ -461,11 +429,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
   "unique_context_marker": "[38]"
   "block_ids":
@@ -473,11 +437,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "Data-driven medium-range weather prediction with a resnet pretrained on climate simulations: A new model for WeatherBench"
   "unique_context_marker": "[39]"
   "block_ids":
@@ -487,11 +447,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
 - "title": "WeatherBench: a benchmark data set for data-driven weather forecasting"
   "unique_context_marker": "[40]"
@@ -500,11 +456,7 @@
   - 4
   - 12
   "intent_labels":
-  - - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
-    - "Domain Overview"
+  - []
   - []
   - []
   "topic_labels":
@@ -524,11 +476,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
 - "title": "Toward data-driven weather and climate forecasting: Approximating a simple general circulation model with deep learning"
   "unique_context_marker": "[42]"
@@ -541,11 +489,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
   - []
 - "title": "Metnet: A neural weather model for precipitation forecasting"
@@ -578,11 +522,7 @@
   - []
   "topic_labels":
   - []
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "Climode: Climate and weather forecasting with physics-informed neural odes"
   "unique_context_marker": "[46]"
   "block_ids":
@@ -598,11 +538,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
 - "title": "Can machines learn to predict weather? Using deep learning to predict gridded 500-hPa geopotential height from historical weather data"
   "unique_context_marker": "[48]"
   "block_ids":
@@ -614,11 +550,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
   - []
 - "title": "Improving data-driven global weather prediction using deep convolutional neural networks on a cubed sphere"
@@ -632,11 +564,7 @@
   - []
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
   - []
   - []
 - "title": "PyTorch image models"
