--- a/data/raw/gis/climate/result/taxo_cot_k_gpt-5-2025-08-07/paper_9.yaml
+++ b/data/raw/gis/climate/result/taxo_cot_k_gpt-5-2025-08-07/paper_9.yaml
@@ -4,7 +4,11 @@
   "block_ids":
   - 1
   "intent_labels":
-  - []
+  - - "Importance of Problem"
+    - "Importance of Problem"
+    - "Prospective Application"
+    - "Prospective Application"
+    - "Importance of Problem"
   "topic_labels":
   - []
 - "title": "Interaction networks for learning about objects, relations and physics"
@@ -15,25 +19,37 @@
   - []
   "topic_labels":
   - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
     - "Spatio-temporal forecasting and nowcasting"
     - "Foundation models and generative architectures"
-    - "Spatio-temporal forecasting and nowcasting"
+    - "Foundation models and generative architectures"
+    - "Foundation models and generative architectures"
 - "title": "The quiet revolution of numerical weather prediction"
   "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
   "topic_labels":
-  - []
+  - - "Renewable forecasting and integration"
+    - "Grid optimization and flexible demand"
+    - "Spatio-temporal forecasting and nowcasting"
+    - "Spatio-temporal forecasting and nowcasting"
+    - "Spatio-temporal forecasting and nowcasting"
 - "title": "Accurate medium-range global weather forecasting with 3d neural networks"
   "unique_context_marker": "[4]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
   - []
   "topic_labels":
   - []
@@ -63,11 +79,19 @@
   - 1
   - 14
   "intent_labels":
-  - []
+  - - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
   - []
   "topic_labels":
   - []
-  - []
+  - - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
 - "title": "FengWu: Pushing the skillful global medium-range weather forecast beyond 10 days lead"
   "unique_context_marker": "[8]"
   "block_ids":
@@ -93,7 +117,11 @@
   - 1
   - 2
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
   - []
   "topic_labels":
   - []
@@ -104,7 +132,11 @@
   - 1
   - 14
   "intent_labels":
-  - []
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
   - []
   "topic_labels":
   - []
@@ -136,11 +168,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "Strictly proper scoring rules, prediction, and estimation"
   "unique_context_marker": "[15]"
   "block_ids":
@@ -172,7 +200,7 @@
   - []
   "topic_labels":
   - - "Downscaling, bias correction, and data assimilation"
-    - "Spatio-temporal forecasting and nowcasting"
+    - "Downscaling, bias correction, and data assimilation"
     - "Downscaling, bias correction, and data assimilation"
     - "Downscaling, bias correction, and data assimilation"
     - "Downscaling, bias correction, and data assimilation"
@@ -187,7 +215,11 @@
     - "Prior Methods"
     - "Prior Methods"
     - "Prior Methods"
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - []
   - []
@@ -198,17 +230,17 @@
   - 2
   - 9
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
   - []
   - []
   "topic_labels":
   - []
   - []
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
 - "title": "Forecasting global weather with graph neural networks"
   "unique_context_marker": "[20]"
   "block_ids":
@@ -217,7 +249,11 @@
   - 5
   - 10
   "intent_labels":
-  - []
+  - - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
   - []
   - []
   - []
@@ -247,11 +283,7 @@
   "topic_labels":
   - []
   - []
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
 - "title": "Learning skillful medium-range global weather forecasting"
   "unique_context_marker": "[23]"
   "block_ids":
@@ -266,7 +298,11 @@
   - 13
   - 15
   "intent_labels":
-  - []
+  - - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
   - []
   - []
   - []
@@ -294,7 +330,11 @@
   - 2
   - 5
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   - []
   - []
   "topic_labels":
@@ -314,17 +354,13 @@
   "block_ids":
   - 1
   "intent_labels":
-  - - "Problem Formulation"
+  - - "Domain Overview"
     - "Domain Overview"
     - "Domain Overview"
     - "Domain Overview"
     - "Domain Overview"
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
 - "title": "Generative emulation of weather forecast ensembles with diffusion models"
   "unique_context_marker": "[27]"
   "block_ids":
@@ -340,11 +376,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "Swin transformer: Hierarchical vision transformer using shifted windows"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -382,11 +414,19 @@
   - 1
   - 14
   "intent_labels":
-  - []
+  - - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
   - []
   "topic_labels":
   - []
-  - []
+  - - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
 - "title": "ClimaX: A foundation model for weather and climate"
   "unique_context_marker": "[33]"
   "block_ids":
@@ -424,18 +464,18 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
 - "title": "Four-castnet: A global data-driven high-resolution weather model using adaptive fourier neural operators"
   "unique_context_marker": "[37]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
   - []
   "topic_labels":
   - []
@@ -446,11 +486,19 @@
   - 1
   - 14
   "intent_labels":
-  - []
+  - - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
   - []
   "topic_labels":
   - []
-  - []
+  - - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
   "unique_context_marker": "[39]"
   "block_ids":
@@ -458,7 +506,11 @@
   - 2
   - 15
   "intent_labels":
-  - []
+  - - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
+    - "Research Gap"
   - []
   - []
   "topic_labels":
@@ -472,7 +524,11 @@
   - 13
   - 15
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Domain Overview"
+    - "Prior Methods"
   - []
   - []
   "topic_labels":
@@ -486,11 +542,7 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
-    - "Foundation models and generative architectures"
+  - []
 - "title": "Simple and effective vae training with calibrated decoders"
   "unique_context_marker": "[42]"
   "block_ids":
@@ -504,7 +556,11 @@
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "title": "The AROME-france convective-scale operational model"
@@ -513,11 +569,19 @@
   - 1
   - 14
   "intent_labels":
-  - []
+  - - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
+    - "Domain Overview"
+    - "Prospective Application"
   - []
   "topic_labels":
   - []
-  - []
+  - - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
+    - "Downscaling, bias correction, and data assimilation"
 - "title": "Learning structured output representation using deep conditional generative models"
   "unique_context_marker": "[45]"
   "block_ids":
@@ -531,7 +595,11 @@
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "title": "Consistency models"
@@ -571,7 +639,11 @@
   "block_ids":
   - 2
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
   - []
 - "title": "Scientific challenges of convective-scale numerical weather prediction"
@@ -580,23 +652,15 @@
   - 1
   - 6
   "intent_labels":
-  - - "Importance of Problem"
+  - - "Domain Overview"
     - "Domain Overview"
-    - "Importance of Problem"
+    - "Domain Overview"
     - "Domain Overview"
     - "Domain Overview"
   - []
   "topic_labels":
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-  - - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
-    - "Spatio-temporal forecasting and nowcasting"
+  - []
+  - []
 - "title": "Layer normalization"
   "unique_context_marker": "[53]"
   "block_ids": []
