--- a/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/gis/climate/result/taxo_final_gpt-5-2025-08-07/paper_2.yaml
@@ -62,7 +62,7 @@
   - 1
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Resource Utilization"
   - "Resource Utilization"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
@@ -72,7 +72,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving data-driven global weather prediction using deep convolutional neural networks on a cubed sphere"
@@ -89,7 +89,7 @@
   - 1
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -109,7 +109,7 @@
   - 3
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Setting/Protocal Adoption"
   - "Prior Methods"
   "topic_labels":
@@ -141,7 +141,7 @@
   - 1
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
@@ -155,7 +155,7 @@
   - 9
   - 14
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
@@ -176,7 +176,7 @@
   - 8
   - 14
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Setting/Protocal Adoption"
   - "Setting/Protocal Adoption"
   - "Algorithm/Principle Adoption"
@@ -210,7 +210,7 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Prior Methods"
+  - "Model/Architecture Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "A convolutional neural network cascade for face detection"
@@ -218,7 +218,7 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Prior Methods"
+  - "Model/Architecture Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Videomae: Masked autoencoders are data-efficient learners for self-supervised video pre-training"
