--- a/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_2.yaml
@@ -10,7 +10,7 @@
   - "Setting/Protocal Adoption"
   - "Setting/Protocal Adoption"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "ECMWF activities for improved hurricane forecasts"
@@ -20,7 +20,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Recent progress and outlook for the ECMWF integrated forecasting system"
   "unique_context_marker": "[3]"
   "block_ids":
@@ -28,7 +28,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Can deep learning beat numerical weather prediction?"
   "unique_context_marker": "[4]"
   "block_ids":
@@ -43,7 +43,7 @@
   - 1
   - 10
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   - "Setting/Protocal Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -62,17 +62,17 @@
   - 1
   - 3
   "intent_labels":
-  - "Domain Overview"
+  - "Resource Utilization"
   - "Resource Utilization"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Downscaling, bias correction, and data assimilation"
+  - null
 - "title": "Data-driven medium-range weather prediction with a resnet pretrained on climate simulations: A new model for weatherbench"
   "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving data-driven global weather prediction using deep convolutional neural networks on a cubed sphere"
@@ -89,10 +89,10 @@
   - 1
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Deep residual learning for image recognition"
   "unique_context_marker": "[11]"
@@ -101,7 +101,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Fourcastnet: A global data-driven high-resolution weather model using adaptive fourier neural operators"
   "unique_context_marker": "[12]"
   "block_ids":
@@ -109,7 +109,7 @@
   - 3
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Setting/Protocal Adoption"
   - "Prior Methods"
   "topic_labels":
@@ -141,7 +141,7 @@
   - 1
   - 7
   "intent_labels":
-  - "Prior Methods"
+  - "Result Comparison"
   - "Prior Methods"
   "topic_labels":
   - "Downscaling, bias correction, and data assimilation"
@@ -155,13 +155,13 @@
   - 9
   - 14
   "intent_labels":
+  - "Result Comparison"
   - "Prior Methods"
   - "Prior Methods"
+  - null
   - "Prior Methods"
-  - "Algorithm/Principle Adoption"
-  - "Domain Overview"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
   - null
@@ -176,12 +176,12 @@
   - 8
   - 14
   "intent_labels":
+  - "Result Comparison"
+  - "Setting/Protocal Adoption"
+  - "Setting/Protocal Adoption"
+  - "Algorithm/Principle Adoption"
+  - "Algorithm/Principle Adoption"
   - "Prior Methods"
-  - "Setting/Protocal Adoption"
-  - "Setting/Protocal Adoption"
-  - "Algorithm/Principle Adoption"
-  - "Algorithm/Principle Adoption"
-  - "Domain Overview"
   "topic_labels":
   - "Foundation models and generative architectures"
   - null
@@ -210,7 +210,7 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Model/Architecture Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "A convolutional neural network cascade for face detection"
@@ -218,7 +218,7 @@
   "block_ids":
   - 6
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Model/Architecture Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Videomae: Masked autoencoders are data-efficient learners for self-supervised video pre-training"
@@ -226,9 +226,9 @@
   "block_ids":
   - 7
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Model/Architecture Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Layer Normalization"
   "unique_context_marker": "[23]"
   "block_ids":
@@ -236,7 +236,7 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Swin transformer: Hierarchical vision transformer using shifted windows"
   "unique_context_marker": "[24]"
   "block_ids":
@@ -266,9 +266,9 @@
   "block_ids":
   - 7
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Model/Architecture Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Group Normalization"
   "unique_context_marker": "[28]"
   "block_ids":
@@ -276,7 +276,7 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Sigmoid-weighted linear units for neural network function approximation in reinforcement learning"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -284,7 +284,7 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Searching for Activation Functions"
   "unique_context_marker": "[30]"
   "block_ids":
@@ -292,15 +292,15 @@
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Deconvolutional networks"
   "unique_context_marker": "[31]"
   "block_ids":
   - 7
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - "Model/Architecture Adoption"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - null
 - "title": "Automatic differentiation in pytorch"
   "unique_context_marker": "[32]"
   "block_ids":
@@ -354,15 +354,15 @@
   "block_ids":
   - 9
   "intent_labels":
-  - "Domain Overview"
-  "topic_labels":
   - null
+  "topic_labels":
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Stochastic representation of model uncertainties in the ECMWF ensemble prediction system"
   "unique_context_marker": "[39]"
   "block_ids":
   - 9
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - null
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Ensemble forecasting"
@@ -370,7 +370,7 @@
   "block_ids":
   - 9
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - null
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Dropout as a bayesian approximation: Representing model uncertainty in deep learning"
@@ -378,7 +378,7 @@
   "block_ids":
   - 9
   "intent_labels":
-  - "Algorithm/Principle Adoption"
+  - null
   "topic_labels":
   - null
 - "title": "Decomposition of the continuous ranked probability score for ensemble prediction systems"
@@ -402,9 +402,9 @@
   "block_ids":
   - 10
   "intent_labels":
-  - null
+  - "Metrics Utilization"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Why should ensemble spread match the rmse of the ensemble mean?"
   "unique_context_marker": "[45]"
   "block_ids":
@@ -418,23 +418,23 @@
   "block_ids":
   - 14
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
-  - "Downscaling, bias correction, and data assimilation"
+  - null
 - "title": "A multivariate balanced initial ensemble generation approach for an atmospheric general circulation model"
   "unique_context_marker": "[47]"
   "block_ids":
   - 14
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
-  - "Downscaling, bias correction, and data assimilation"
+  - null
 - "title": "Subseasonal to seasonal prediction project: bridging the gap between weather and climate"
   "unique_context_marker": "[48]"
   "block_ids":
   - 14
   "intent_labels":
-  - "Research Gap"
+  - "Importance of Problem"
   "topic_labels":
   - null
 - "title": "Subseasonal to seasonal prediction of weather to climate with application to tropical cyclones"
