--- a/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_3.yaml
+++ b/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_3.yaml
@@ -37,7 +37,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - null
 - "title": "Adaptive fourier neural operators: Efficient token mixers for transformers"
@@ -68,7 +68,7 @@
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "The ERA5 global reanalysis"
   "unique_context_marker": "[8]"
@@ -108,7 +108,7 @@
   - 2
   - 6
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   - "Model/Architecture Adoption"
   "topic_labels":
   - null
@@ -139,7 +139,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Fourier neural operator for parametric partial differential equations"
   "unique_context_marker": "[16]"
   "block_ids":
@@ -161,7 +161,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Conditional local convolution for spatio-temporal meteorological forecasting"
@@ -171,7 +171,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Climate downscaling using YNet: A deep convolutional network with skip connections and fusion"
   "unique_context_marker": "[20]"
   "block_ids":
@@ -193,7 +193,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - null
 - "title": "Learning differential operators for interpretable time series modeling"
@@ -201,7 +201,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
   - null
 - "title": "ClimaX: A foundation model for weather and climate"
@@ -273,7 +273,7 @@
   - 10
   "intent_labels":
   - "Prior Methods"
-  - "Domain Overview"
+  - "Prior Methods"
   - "Model/Architecture Adoption"
   - "Result Comparison"
   "topic_labels":
@@ -342,7 +342,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Improving data-driven global weather prediction using deep convolutional neural networks on a cubed sphere"
   "unique_context_marker": "[38]"
   "block_ids":
@@ -350,7 +350,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Interpretable weather forecasting for worldwide stations with a unified deep model"
   "unique_context_marker": "[39]"
   "block_ids":
@@ -361,7 +361,7 @@
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Foundation models and generative architectures"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Connecting the dots: Multivariate time series forecasting with graph neural networks"
   "unique_context_marker": "[40]"
   "block_ids":
