--- a/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_9.yaml
+++ b/data/raw/gis/climate/result/taxo_reverse_gpt-5-2025-08-07/paper_9.yaml
@@ -4,7 +4,7 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
+  - null
   "topic_labels":
   - "Food security, health, and disaster response"
 - "title": "Interaction networks for learning about objects, relations and physics"
@@ -20,16 +20,16 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Research Gap"
+  - null
   "topic_labels":
-  - "Spatio-temporal forecasting and nowcasting"
+  - null
 - "title": "Accurate medium-range global weather forecasting with 3d neural networks"
   "unique_context_marker": "[4]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
-  - "Research Gap"
+  - null
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -59,11 +59,11 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - null
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Downscaling, bias correction, and data assimilation"
+  - null
 - "title": "FengWu: Pushing the skillful global medium-range weather forecast beyond 10 days lead"
   "unique_context_marker": "[8]"
   "block_ids":
@@ -89,7 +89,7 @@
   - 1
   - 2
   "intent_labels":
-  - "Research Gap"
+  - null
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -100,7 +100,7 @@
   - 1
   - 14
   "intent_labels":
-  - "Domain Overview"
+  - null
   - "Domain Overview"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -128,13 +128,13 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Foundation models and generative architectures"
 - "title": "Strictly proper scoring rules, prediction, and estimation"
   "unique_context_marker": "[15]"
   "block_ids":
   - 10
   "intent_labels":
-  - "Metrics Utilization"
+  - "Algorithm/Principle Adoption"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Calibration of large neural weather models"
@@ -162,8 +162,8 @@
   - 1
   - 2
   "intent_labels":
+  - null
   - "Research Gap"
-  - "Prior Methods"
   "topic_labels":
   - "Foundation models and generative architectures"
   - "Foundation models and generative architectures"
@@ -174,9 +174,9 @@
   - 2
   - 9
   "intent_labels":
+  - null
   - "Research Gap"
-  - "Prior Methods"
-  - "Model/Architecture Adoption"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Foundation models and generative architectures"
@@ -189,7 +189,7 @@
   - 5
   - 10
   "intent_labels":
-  - "Prior Methods"
+  - null
   - "Prior Methods"
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
@@ -214,12 +214,12 @@
   - 15
   "intent_labels":
   - "Prior Methods"
-  - "Metrics Utilization"
+  - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
   - "Spatio-temporal forecasting and nowcasting"
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Learning skillful medium-range global weather forecasting"
   "unique_context_marker": "[23]"
   "block_ids":
@@ -234,7 +234,7 @@
   - 13
   - 15
   "intent_labels":
-  - "Prior Methods"
+  - null
   - "Prior Methods"
   - "Problem Formulation"
   - "Prior Methods"
@@ -242,7 +242,7 @@
   - "Model/Architecture Adoption"
   - "Algorithm/Principle Adoption"
   - "Result Comparison"
-  - "Model/Architecture Adoption"
+  - "Algorithm/Principle Adoption"
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -262,7 +262,7 @@
   - 2
   - 5
   "intent_labels":
-  - "Prior Methods"
+  - null
   - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
@@ -282,9 +282,9 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Importance of Problem"
-  "topic_labels":
   - null
+  "topic_labels":
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Generative emulation of weather forecast ensembles with diffusion models"
   "unique_context_marker": "[27]"
   "block_ids":
@@ -300,7 +300,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Foundation models and generative architectures"
 - "title": "Swin transformer: Hierarchical vision transformer using shifted windows"
   "unique_context_marker": "[29]"
   "block_ids":
@@ -334,11 +334,11 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - null
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Downscaling, bias correction, and data assimilation"
+  - null
 - "title": "ClimaX: A foundation model for weather and climate"
   "unique_context_marker": "[33]"
   "block_ids":
@@ -376,14 +376,14 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Four-castnet: A global data-driven high-resolution weather model using adaptive fourier neural operators"
   "unique_context_marker": "[37]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
-  - "Research Gap"
+  - null
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
@@ -394,11 +394,11 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - null
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Downscaling, bias correction, and data assimilation"
+  - null
 - "title": "Gencast: Diffusion-based ensemble forecasting for medium-range weather"
   "unique_context_marker": "[39]"
   "block_ids":
@@ -406,8 +406,8 @@
   - 2
   - 15
   "intent_labels":
+  - null
   - "Research Gap"
-  - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
   - "Foundation models and generative architectures"
@@ -420,7 +420,7 @@
   - 13
   - 15
   "intent_labels":
-  - "Domain Overview"
+  - null
   - "Benchmark Utilization"
   - "Prior Methods"
   "topic_labels":
@@ -434,7 +434,7 @@
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - null
+  - "Foundation models and generative architectures"
 - "title": "Simple and effective vae training with calibrated decoders"
   "unique_context_marker": "[42]"
   "block_ids":
@@ -448,7 +448,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "The AROME-france convective-scale operational model"
@@ -457,11 +457,11 @@
   - 1
   - 14
   "intent_labels":
-  - "Prospective Application"
+  - null
   - "Prior Methods"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
-  - "Downscaling, bias correction, and data assimilation"
+  - null
 - "title": "Learning structured output representation using deep conditional generative models"
   "unique_context_marker": "[45]"
   "block_ids":
@@ -475,7 +475,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Foundation models and generative architectures"
 - "title": "Consistency models"
@@ -515,7 +515,7 @@
   "block_ids":
   - 2
   "intent_labels":
-  - "Prior Methods"
+  - "Research Gap"
   "topic_labels":
   - "Spatio-temporal forecasting and nowcasting"
 - "title": "Scientific challenges of convective-scale numerical weather prediction"
@@ -524,11 +524,11 @@
   - 1
   - 6
   "intent_labels":
-  - "Importance of Problem"
+  - null
   - "Importance of Problem"
   "topic_labels":
-  - null
-  - null
+  - "Spatio-temporal forecasting and nowcasting"
+  - "Spatio-temporal forecasting and nowcasting"
 - "title": "Layer normalization"
   "unique_context_marker": "[53]"
   "block_ids": []
